# AR-mobile-app-for-robots

./: README.md  build.gradle  local.properties  settings.gradle
arcore-example/: build.gradle
arcore-example/src/main/: AndroidManifest.xml
arcore-example/src/main/assets/models/: axis.dae  cube.dae  manipulator.dae  manipulator_move.dae  manipulator_rotate.dae  tin_can.dae
arcore-example/src/main/res/drawable-anydpi/: button_background.xml
arcore-example/src/main/res/layout/: activity_main.xml
arcore-example/src/main/res/menu/: actions.xml  goal.xml  settings.xml
arcore-example/src/main/res/values/: colors.xml  strings.xml
arengine-example/: build.gradle
arengine-example/src/main/: AndroidManifest.xml
arengine-example/src/main/res/layout/: activity_main.xml
arengine-example/src/main/res/values/: strings.xml
assets/: axis.blend  cube.blend  manipulator.blend  tincan.blend
glrenderer/: build.gradle
glrenderer/src/main/: AndroidManifest.xml
glrenderer/src/main/assets/shaders/: fp_material_shaded.shader  fp_textured_shaded.shader  vp_colored_vertex.shader  vp_flat_color.shader  vp_flat_shaded.shader  vp_material_shaded.shader  vp_textured_shaded.shader
gradle/wrapper/: gradle-wrapper.properties
kdl/: build.gradle
kdl/src/main/: AndroidManifest.xml
kdl/src/main/cpp/: CMakeLists.txt  kdl.cpp  robot.cpp  robot.h  utils.cpp  utils.h
opengl-example/: build.gradle
opengl-example/src/main/: AndroidManifest.xml
roslib/: build.gradle
roslib/src/main/: AndroidManifest.xml
urdflib/: build.gradle
urdflib/src/main/: AndroidManifest.xml
(+92 files in other folders)
